--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # OR only to exclude workspace cache
 .obsidian/workspace/*
-
+workspace.json
 # Exclude consultant specific files "personal"
 05*-*Personal/
 
@@ -18,3 +18,4 @@ null*
 # Add below lines to exclude OS settings and caches
 .trash/
 .DS_Store
+.obsidian/workspace.json
